k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: autocours-service
spec:
  selector:
    app: autocours
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
